--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: replay_kit_launcher
 description: A flutter plugin of the launcher used to open RPSystemBroadcastPickerView for iOS
-version: 1.0.2+5
+version: 1.0.2+6
 homepage: https://github.com/AlexSmirnov9107/flutter_replay_kit_launcher
 
 environment:
@@ -25,6 +25,7 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
+    implements: replay_kit_launcher
     platforms:
       ios:
         pluginClass: ReplayKitLauncherPlugin
